--- a/style.css
+++ b/style.css
@@ -1,79 +1,81 @@
-* {
+* *::before, *::after{
     box-sizing: border-box;
 }
 
-body {
+* {
     margin: 0;
-    font-family: 'Poppins', sans-serif;
+    padding: 0;
+    font: inherit;
+    /* outline: dotted red; */
 }
 
+img, picture, svg, video {
+    display: block;
+    max-width: 100%;
+}
+
+body {
+    min-height: 100vh;
+    line-height: 1.6;
+    font-family: Popins, sans-serif;
+}
+
+
 nav {
-    height: 70px;
     display: flex;
-    padding: 20px 36px;
-    box-shadow: 0px 2.98256px 7.4564px rgba(0, 0, 0, 0.1);
+    justify-content: flex-start;
+    align-items: center;
+    padding: 1.25em 1.875em;
+    box-shadow: 0px 3px 7.5px rgba(0,0,0,0.1);
 }
 
 .bold {
-    font-weight: bold;
+    font-weight: 600;
 }
 
 .gray {
-    color: #918E9B;
+    color : #918E9B;
 }
 
 .nav--logo {
-    max-width: 100px;
+    width: 5.125em;
+    height: 1.56em;
 }
 
-section {
-    padding: 20px;
-}
-
-.hero {
-    display: flex;
-    flex-direction: column;
-}
-
-.hero--photo {
-    max-width: 400px;
-    align-self: center;
-}
-
-.hero--header {
-    margin-bottom: 16px;
+.hero--image {
+    width: 80%;
+    height: 100%;
+    margin: 2em auto;
+    object-fit: cover;
 }
 
 .hero--text {
-    margin-top: 0;
+    width: 90%;
+    margin: 0 auto;
 }
 
-.cards-list {
-    display: flex;
-    flex-wrap: nowrap;
-    gap: 20px;
-    overflow-x: auto;
+h1 {
+    font-size: 2.25rem;
+    font-weight: 600;
+    margin: 0;
+}
+
+h3 {
+    font-size: 1rem;
+    font-weight: 300;
+    width: 60%;
+    line-height: 1.2;
+    margin: 0.5em 0;
 }
 
 .card {
-    width: 175px;
-    font-size: 12px;
-    flex: 0 0 auto;         /* ADD */
-    display: flex;          /* ADD */
-    flex-direction: column; /* ADD */
-    position: relative;
+    width: 11em;
+    font-size: 0.875rem;
 }
 
 .card--image {
     width: 100%;
     border-radius: 9px;
-    margin-bottom: 9px;
-}
-
-/* ADD */
-.card--title {
-    overflow: hidden;
-    text-overflow: ellipsis;
 }
 
 .card--stats {
@@ -82,20 +84,5 @@ section {
 }
 
 .card--star {
-    height: 14px;
-}
-
-/* ADD */
-.card--price {
-    margin-top: auto;
-}
-
-.card--badge {
-    position: absolute;
-    top: 6px;
-    left: 6px;
-    background-color: white;
-    padding: 5px 7px;
-    border-radius: 2px;
-    font-weight: bold;
+    height: 0.8rem;
 }
