--- a/style.css
+++ b/style.css
@@ -6,7 +6,6 @@
     margin: 0;
     padding: 0;
     font: inherit;
-    /* outline: dotted red; */
 }
 
 img, picture, svg, video {
@@ -68,21 +67,62 @@ h3 {
     margin: 0.5em 0;
 }
 
+p {
+    margin: 0.5em 0;
+}
+
+section {
+    padding: 1.5em;
+}
+
+.cards-list {
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 20px;
+    overflow-x: auto;
+}
+
 .card {
-    width: 11em;
+    width: 12.6em;
     font-size: 0.875rem;
+    flex: 0 0 auto;        
+    display: flex;       
+    flex-direction: column; 
+    position: relative;
 }
 
 .card--image {
     width: 100%;
     border-radius: 9px;
+    margin-bottom: 0.75em;
 }
 
 .card--stats {
     display: flex;
     align-items: center;
+    gap: 2px;
 }
 
 .card--star {
     height: 0.8rem;
+}
+
+.card--title {
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.card--price {
+    margin-top: auto;
+}
+
+.card--badge {
+    position: absolute;
+    top: 6px;
+    left: 6px;
+    background-color: white;
+    padding: 5px 7px;
+    border-radius: 2px;
+    font-size: 0.75rem;
+    font-weight: bold;
 }
